add app wrap div

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
         <script src="./scripts.js"></script>
     </head>
     <body>
-
+        <div class="app_wrap">
+            <header>
+                <input type="text" autocomplete="off" class="search_box" placeholder="Search for a city...">
+            </header>
+            <main>
+                <section class="location">
+                    <div class="city">New York</div>
+                    <div class="date">Wednesday 23 February 2022</div>
+                </section>
+                <div class="current"></div>
+                <div class="temperature">15<span>°C</span></div>
+                <div class="weather">Sunny</div>
+            </main>
+        </div>
     </body>
 </html>
